<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout style="@style/relative_layout">

        <TextView
            android:id="@+id/question2_num"
            style="@style/question_number_textview"
            android:text="@string/number2" />

        <TextView
            style="@style/question_textview"
            android:layout_toRightOf="@+id/question2_num"
            android:text="@string/question2" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/radio_group_2"
        style="@style/radiogroup">

        <RadioButton
            android:id="@+id/q2_choice1"
            style="@style/radio_button"
            android:text="@string/question2_choice1" />

        <RadioButton
            android:id="@+id/q2_choice2"
            style="@style/radio_button"
            android:text="@string/question2_choice2" />

        <RadioButton
            android:id="@+id/q2_choice3"
            style="@style/radio_button"
            android:text="@string/question2_choice3" />

        <RadioButton
            android:id="@+id/q2_choice4"
            style="@style/radio_button"
            android:text="@string/question2_choice4" />
    </RadioGroup>

    <TextView
        android:id="@+id/solution_2"
        style="@style/solution" />
</LinearLayout>