<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout style="@style/relative_layout">

        <TextView
            android:id="@+id/question1_num"
            style="@style/question_number_textview"
            android:text="@string/number1" />

        <TextView
            style="@style/question_textview"
            android:layout_toRightOf="@+id/question1_num"
            android:text="@string/question1" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/radio_group_1"
        style="@style/radiogroup">

        <RadioButton
            android:id="@+id/q1_choice1"
            style="@style/radio_button"
            android:text="@string/question1_choice1" />

        <RadioButton
            android:id="@+id/q1_choice2"
            style="@style/radio_button"
            android:text="@string/question1_choice2" />

        <RadioButton
            android:id="@+id/q1_choice3"
            style="@style/radio_button"
            android:text="@string/question1_choice3" />

        <RadioButton
            android:id="@+id/q1_choice4"
            style="@style/radio_button"
            android:text="@string/question1_choice4" />
    </RadioGroup>

    <TextView
        android:id="@+id/solution_1"
        style="@style/solution" />

</LinearLayout>